build/systemc/scons_config.log
file /home/kidus/trench/ecen5593_project/build/systemc/SConscript,line 45:
	Configure(confdir = build/systemc/.scons_config)
scons: Configure: Checking whether __i386__ is declared... 
build/systemc/.scons_config/conftest_21.c <-
  |
  |int main(void)
  |{
  |#ifndef __i386__
  |    (void) __i386__;
  |#endif
  |    ;
  |    return 0;
  |}
  |
[m [      CC] [33msystemc/.scons_config/conftest_21[33m[1m.c[34m[1m -> [33m[1m.o(B[m
build/systemc/.scons_config/conftest_21.c: In function 'main':
build/systemc/.scons_config/conftest_21.c:5:12: error: '__i386__' undeclared (first use in this function)
    5 |     (void) __i386__;
      |            ^~~~~~~~
build/systemc/.scons_config/conftest_21.c:5:12: note: each undeclared identifier is reported only once for each function it appears in
scons: Configure: no

scons: Configure: Checking whether __x86_64__ is declared... 
build/systemc/.scons_config/conftest_22.c <-
  |
  |int main(void)
  |{
  |#ifndef __x86_64__
  |    (void) __x86_64__;
  |#endif
  |    ;
  |    return 0;
  |}
  |
[m [      CC] [33msystemc/.scons_config/conftest_22[33m[1m.c[34m[1m -> [33m[1m.o(B[m
scons: Configure: yes


